[gd_scene load_steps=4 format=3 uid="uid://7mmdnay7ypnd"]

[ext_resource type="Theme" uid="uid://dp5xim38i7y6m" path="res://themes/themes/main_theme.tres" id="1_46wwj"]
[ext_resource type="Script" path="res://menus/steam_lobby/steam_lobby.gd" id="1_itpus"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8umpq"]

[node name="SteamLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_46wwj")
script = ExtResource("1_itpus")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -202.5
offset_right = 500.0
offset_bottom = 202.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Create" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Create"

[node name="Join" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Join"

[node name="Players" type="Panel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Players"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Players/MarginContainer"]
layout_mode = 2

[node name="PlayerCount" type="Label" parent="HBoxContainer/VBoxContainer/Players/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Players (0)"

[node name="PlayerList" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Players/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="Leave" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Leave"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LobbyName" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Lobby name:"

[node name="LobbySetName" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Lobby name"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="SteamName" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Steam name"

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Start"

[node name="Chat" type="Panel" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Chat/MarginContainer"]
layout_mode = 2

[node name="LobbyGetName" type="Label" parent="HBoxContainer/VBoxContainer2/Chat/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lobby name
"

[node name="ChatMessages" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/Chat/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MessageSend" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Send message"

[node name="MessageText" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LobbyPopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(500, 500)
theme_override_styles/panel = SubResource("StyleBoxEmpty_8umpq")

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LobbyPopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="LobbyPopupPanel/VBoxContainer/Panel"]
layout_mode = 0
offset_right = 141.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPopupPanel/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LobbyPopupPanel/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby list"

[node name="ScrollContainer" type="ScrollContainer" parent="LobbyPopupPanel/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LobbyList" type="VBoxContainer" parent="LobbyPopupPanel/VBoxContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PopupClose" type="Button" parent="LobbyPopupPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -54.0
offset_right = 122.5
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
text = "Back"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/MessageSend" to="." method="_on_message_send_pressed"]
[connection signal="pressed" from="LobbyPopupPanel/VBoxContainer/PopupClose" to="." method="_on_popup_close_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
